# _AppStarter

./: .flake8  .gitignore  .pylintrc  README.md  envdefault  mypy.ini  pyproject.toml  setup.py
openverse_applaunch/: __init__.py  main.py
openverse_applaunch/objects/: base.py  constants.py  containers.py  enum.py  exceptions.py  instrumentaion.py  types.py
openverse_applaunch/objects/abc/: __init__.py  heath.py  interfaces.py  service.py
openverse_applaunch/objects/managers/: __init__.py  health.py  lifecycle.py  metrics.py  table.py  tracer.py
openverse_applaunch/objects/managers/table/: __init__.py  core.py  registry.py  storage.py
openverse_applaunch/objects/managers/table/creators/: main.py  service.py
openverse_applaunch/objects/managers/table/renders/: main.py  service.py
openverse_applaunch/objects/models/: __init__.py  config.py  health.py  response.py
openverse_applaunch/objects/services/: __init__.py  dynamic_create.py  telemetry.py
tests/: _test.py  conftest.py  constants.py  test_.py  test_application.py  test_table_manager.py
